# ML-course-datatalks

./: 05-test.md:Zone.Identifier  Dockerfile  Pipfile
2024/: 05-test.py.md  predict.py
2025/: .flake8  .gitignore  Dockerfile_base  README.md  pyproject.toml
2025/machine_learning_project/: app.py  init.py  main.py
2025/machine_learning_project/models/: Record.py
2025/machine_learning_project/scripts/: score_record.py
ml_course/: 05-test.ipynb  ping.py  predict-test.py
