[tool.poetry]
name = "machine-learning"
version = "1.0.0"
description = "Machine learning practising"
authors = ["Piotr Kitlowski <piotr.kitlowski@gmail.com>"]
license = "MIT"
readme = "pypi_description.md"
packages = [
    { include = "machine_learning" }
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120
